# apisdk-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  release.toml
apisdk/: Cargo.toml  release.toml
apisdk-macros/: Cargo.toml  README.md
apisdk-macros/src/: build.rs  lib.rs  parse.rs
apisdk/src/: core.rs  digest.rs  lib.rs  otel.rs  result.rs
apisdk/src/executor/: execute.rs  extract.rs  form.rs  macros.rs  mod.rs
apisdk/src/extension/: auth.rs  log.rs  logger.rs  misc.rs  mock.rs  mod.rs  otel.rs  trace.rs  tracing.rs
apisdk/src/extractor/: auto.rs  json.rs  mod.rs  text.rs  xml.rs
apisdk/src/rewriter/: mod.rs
apisdk/src/rewriter/resolver/: mod.rs
apisdk/src/rewriter/router/: mod.rs  multi.rs  simple.rs
apisdk/src/router/: mod.rs  multi.rs  single.rs
apisdk/src/url/: hickory.rs  mod.rs  resolver.rs  rewriter.rs
apisdk/tests/: api_method.rs  auth.rs  core_func.rs  custom_new.rs  extract_auto.rs  extract_json.rs  extract_other.rs  extract_text.rs  extract_xml.rs  http_api.rs  log.rs  logger.rs  middleware.rs  mock.rs  process_204.rs  resolve.rs  rewrite.rs  router.rs  send_form.rs  send_get.rs  send_json.rs  send_multipart.rs  send_raw.rs  trace.rs  wasm.rs
apisdk/tests/common/: api.rs  mod.rs  server.rs
sdks/apisdk-typicode/: Cargo.toml
sdks/apisdk-typicode/src/: dto.rs
sdks/instagram-api/: Cargo.toml  README.md
sdks/instagram-api/src/: lib.rs
sdks/instagram-api/src/basic_display/: media.rs  mod.rs  oauth.rs  user.rs
sdks/instagram-api/src/graph/: mod.rs
sdks/typicode-api/: Cargo.toml
sdks/typicode-api/src/: albums.rs  lib.rs  posts.rs  users.rs
