[package]
name = "apisdk-macros"
version = "0.0.4-beta.4"
edition = "2021"
license = "MIT"
description = "A highlevel API client framework for Rust."
repository = "https://github.com/zhengcan/apisdk-rs"
keywords = ["http", "restful", "reqwest", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doc = false
doctest = false

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
quote = "1.0"
