[package]
name = "apisdk-macros"
version = "0.0.15-beta.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An easy-to-use API toolkit for writing HTTP API Clients for Rust."
categories = ["network-programming", "web-programming::http-client"]
repository = "https://github.com/zhengcan/apisdk-rs"
keywords = ["http", "restful", "reqwest", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doc = false
doctest = false

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
quote = "1.0"
