[package]
name = "apisdk"
version = "0.0.4-rc.1"
edition = "2021"
license = "MIT"
description = "A highlevel API client framework for Rust."
repository = "https://github.com/zhengcan/apisdk-rs"
keywords = ["http", "restful", "reqwest", "api"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
apisdk-macros = "0.0.4-beta.8"
async-trait = "0.1"
http = "1.0"
url = "2.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
reqwest-middleware = "0.2"
hyper = "0.14"
task-local-extensions = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
nanoid = "0.4"
uuid = { version = "1.6", features = ["v4"], optional = true }
base64 = "0.21"
md-5 = "0.10"
sha1 = { version = "0.10", features = ["asm"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
md-5 = { version = "0.10", features = ["asm"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3"
reqwest-tracing = { version = "0.4", features = ["opentelemetry_0_20"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"

[features]
default = []
uuid = ["dep:uuid"]
