[package]
name = "apisdk"
version = "0.0.12"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An easy-to-use API toolkit for writing HTTP API Clients for Rust."
categories = ["network-programming", "web-programming::http-client"]
repository = "https://github.com/zhengcan/apisdk-rs"
keywords = ["http", "restful", "reqwest", "api"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
apisdk-macros = { version = "0.0.12", path = "../apisdk-macros" }
async-trait = "0.1"
futures = "0.3"
http = "0.2"
url = "2.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
reqwest-middleware = "0.2"
task-local-extensions = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
regex = "1.10"
lazy_static = "1.4"
getrandom = "0.2"
nanoid = "0.4"
uuid = { version = "1.6", features = ["v4"], optional = true }
base64 = "0.21"
md-5 = "0.10"
sha1 = { version = "0.10", features = ["asm"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
md-5 = { version = "0.10", features = ["asm"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14" }
hickory-resolver = { version = "0.24", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }
futures = "0.3"
# warp = { version = "0.3", optional = true }
reqwest-tracing = { version = "0.4", features = ["opentelemetry_0_20"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
warp = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
warp_wasi = { version = "0.3" }
js-sys = "0.3"
web-time = "1.0"

[features]
default = []
uuid = ["dep:uuid"]
hickory = ["dep:hickory-resolver"] # for non-wasm only
