[package]
name = "apisdk-typicode"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doc = false

[dependencies]
apisdk = { path = "../../apisdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
