[package]
name = "typicode-api"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Typicode Api for Rust (based on apisdk)"
repository = "https://github.com/zhengcan/apisdk-rs"
keywords = ["api", "sdk", "reqwest", "restful"]
publish = false

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
apisdk = { version = "0.0.15", path = "../../apisdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
